updating readme, gitignore

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <p>Current Code</p>
         <img src="https://current-color.s3-us-west-1.amazonaws.com/current_code/current.png" />
-        <p>How this was calculated</p>
+        <p>How this was calculated: [tba]</p>
     </body>
 </html>
