adding web parser for dhhs nevada

--- a/navbar.html
+++ b/navbar.html
@@ -34,7 +34,7 @@
 
     <body style="margin:0 !important; padding:0 !important;">
         <div class="topnav">
-            <a href="https://reno.covid-alert.org/index.html">Code</a>
+            <a href="https://reno.covid-alert.org/index.html">Home</a>
             <a href="https://reno.covid-alert.org/faq.html">FAQ</a>
             <a href="https://reno.covid-alert.org/about.html">About</a>
           </div>
