--- a/index.html
+++ b/index.html
@@ -15,21 +15,47 @@
     <div id="nav-placeholder" style="margin:0; padding:0;"></div>
     
     <body>
-        <h1>Covid Alert Level for Northern Nevada</h1>
-        <h1 style="color: red;">If you happened to land here, please note this page is still under development</h1>
-        <p>Current "Burn" Code</p>
-        <img src="resources/filler.svg" style="width: 200px; height:100px;"/>
-        <p><button type="button" onclick="expandDiv('howCalculated')">How is this code calculated?</button></p>
-        <div id="howCalculated" style="display: none;">
-            <p>Here are the metrics that went into the alert code:</p>
-            <ul>
-                <li>
-                    <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">TBA</span>
-                </li>
-                <li>
-                    <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">TBA</span>
-                </li>
-            </ul>
-        </div>
+            <h1>Covid Alert Level for Northern Nevada</h1>
+            <!--<h1 style="color: red;">If you happened to land here, please note this page is still under development</h1>-->
+            <p>Current "Burn" Code</p>
+            <div style="padding-left: 20px;">
+                <img src="resources/meter-demo.png" style="width: 350px; vertical-align: middle;"/>
+                <span style="vertical-align: middle; padding-left: 20px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">Recommendations based on code</span>
+                <span style="vertical-align: middle; text-align: center; display: inline-block; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
+                    Graph Title<br>
+                    <img src="resources/demo-graph.png" style="vertical-align: middle; padding-left: 20px; height: 215px;"/> <!--TODO: make sure heights match--><br>
+                    Description
+                </span>
+            </div>
+            <p><button type="button" onclick="expandDiv('howCalculated')">How is this code calculated?</button></p>
+            <div id="howCalculated" style="display: none;">
+                <p>The following are descriptions of the eight metrics that went into the alert code:</p>
+                <ul>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">Daily New Cases (TBA)</span>
+                    </li>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">Test Positivity (TBA)</span>
+                    </li>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">Daily New Cases, per 100,000 people (TBA)</span>
+                    </li>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">Daily Deaths (TBA)</span>
+                    </li>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">COVID-19 Hospitalizations (TBA)</span>
+                    </li>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">Hosptial Staffed Bed Capacity (TBA)</span>
+                    </li>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">COVID-19 ICU Bed Usage</span>
+                    </li>
+                    <li>
+                        <img class="calculations_img" src="resources/filler.svg" /><span class="calculations_text">COVID-19 ICU Bed Usage</span>
+                    </li>
+                </ul>
+            </div>
     </body>
 </html>
